deployment.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: gocal-deployment
spec:
  selector:
    matchLabels:
      app: gocal
  replicas: 1 # Update the replicas from 2 to 4
  template:
    metadata:
      labels:
        app: gocal
    spec:
      containers:
      - name: gocal
        image: teochenglim/gocal:latest
        ports:
        - containerPort: 3000
