service.yml
kind: Service
apiVersion: v1
metadata:
  name: gocal-svc
spec:
  selector:
    app: gocal
  ports:
    - nodePort: 32160
      port: 3000
      protocol: TCP
      targetPort: 3000
  type: NodePort
