ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gocal-ing
  labels:
    app: gocal
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: gocal-svc
              servicePort: 3000
